# camera-demo-rs

./: Cargo.toml
src/: actions.rs  app.rs  main.rs  types.rs
src/camera/: devices_query.rs  mod.rs
src/core/: camera.rs  devices_model.rs  mod.rs  rs_backend.rs
src/core/camera/: devices_query.rs  mod.rs
src/ui/: devices_combo_box.rs  fatal_popup.rs  mod.rs  status_bar.rs
